deploy/vitest-ui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vitest-ui
  namespace: vitest-ui
spec:
  ports:
    - name: backend
      port: 51204
      protocol: TCP
      targetPort: 51204
  selector:
    app: vitest-ui
  type: ClusterIP
