deploy/vitest-ui/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns: private
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/$ /__vitest__/#/ permanent;
  name: vitest-ui
  namespace: vitest-ui
spec:
  ingressClassName: nginx
  rules:
    - host: example.dev
      http:
        paths:
          - backend:
              service:
                name: vitest-ui
                port:
                  number: 51204
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - example.dev
      secretName: vitest-ui-tls
